; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/misc/extr_zipfile.c_zipfileGetTime.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/misc/extr_zipfile.c_zipfileGetTime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SQLITE_NULL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @zipfileGetTime to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zipfileGetTime(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = icmp eq i32* %4, null
  br i1 %5, label %11, label %6

6:                                                ; preds = %1
  %7 = load i32*, i32** %3, align 8
  %8 = call i64 @sqlite3_value_type(i32* %7)
  %9 = load i64, i64* @SQLITE_NULL, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %13

11:                                               ; preds = %6, %1
  %12 = call i32 (...) @zipfileTime()
  store i32 %12, i32* %2, align 4
  br label %16

13:                                               ; preds = %6
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @sqlite3_value_int64(i32* %14)
  store i32 %15, i32* %2, align 4
  br label %16

16:                                               ; preds = %13, %11
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i64 @sqlite3_value_type(i32*) #1

declare dso_local i32 @zipfileTime(...) #1

declare dso_local i32 @sqlite3_value_int64(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
